<resources>
    <string name="app_name">RoomExample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_add">Add User</string>
    <string name="lbl_view">View User</string>
    <string name="lbl_delete">Delete User</string>
    <string name="lbl_update">Update User</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
</resources>
